Reduce the batch size of C-Flow

--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -285,9 +285,9 @@
     "    model = Cflow(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
-    "        layers=layers,\n",
+    "        layers=layers[-3:],\n",
+    "        fiber_batch_size=BATCH_SIZE,\n",
     "        pre_trained=True,\n",
-    "        fiber_batch_size=64,\n",
     "        decoder=\"freia-cflow\",\n",
     "        condition_vector=128,\n",
     "        coupling_blocks=8,\n",
