Not use the model visualizer

--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -54,6 +54,7 @@
     "    anomaly_map_to_color_map,\n",
     "    superimpose_anomaly_map,\n",
     ")\n",
+    "from anomalib.visualization import ImageVisualizer\n",
     "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from lightning.pytorch.utilities.types import EVAL_DATALOADERS, TRAIN_DATALOADERS\n",
     "from matplotlib import pyplot as plt\n",
@@ -209,8 +210,7 @@
     "DATASET_PATH_ANOMALY = \"./datasets/custom_anomaly\"\n",
     "IMAGE_SIZE = 128\n",
     "BATCH_SIZE = 1\n",
-    "EPOCHS = 1\n",
-    "CHECKPOINT_PATH = \"./checkpoint.ckpt\""
+    "EPOCHS = 1"
    ]
   },
   {
@@ -220,31 +220,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODEL_NAME = \"CFA\"\n",
+    "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
     "# MODEL_NAME = \"C-Flow\"\n",
-    "# MODEL_NAME = \"CS-Flow\"\n",
+    "MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
     "# MODEL_NAME = \"DFM\"\n",
-    "# MODEL_NAME = \"DRAEM\"\n",
-    "# MODEL_NAME = \"DSR\"\n",
-    "# MODEL_NAME = \"Efficient AD\"\n",
-    "# MODEL_NAME = \"FastFlow\"\n",
+    "# MODEL_NAME = \"DRAEM\"  # \"\"\n",
+    "# MODEL_NAME = \"DSR\"  # \"\"\n",
+    "# MODEL_NAME = \"Efficient AD\"  # \"\"\n",
+    "# MODEL_NAME = \"FastFlow\"  # \"cait_m48_448\"\n",
     "# MODEL_NAME = \"FRE\"\n",
-    "# MODEL_NAME = \"GANomaly\"\n",
+    "# MODEL_NAME = \"GANomaly\"  # \"\"\n",
     "# MODEL_NAME = \"PaDiM\"\n",
     "# MODEL_NAME = \"PatchCore\"\n",
     "# MODEL_NAME = \"Reverse Distillation\"\n",
     "# MODEL_NAME = \"STFPM\"\n",
     "# TODO\n",
     "# MODEL_NAME = \"SuperSimpleNet\"\n",
-    "# MODEL_NAME = \"U-Flow\"\n",
-    "# MODEL_NAME = \"VLM-AD\"\n",
-    "MODEL_NAME = \"WinCLIP\"\n",
-    "# BACKBONE = \"\"\n",
+    "# MODEL_NAME = \"U-Flow\"  # \"mcait\"\n",
+    "# MODEL_NAME = \"VLM-AD\"  # \"\"\n",
+    "# MODEL_NAME = \"WinCLIP\"  # \"\"\n",
+    "BACKBONE = \"\"\n",
     "# BACKBONE = \"resnet18\"\n",
     "# BACKBONE = \"resnet50\"\n",
     "# BACKBONE = \"efficientnet_b0\"\n",
-    "BACKBONE = \"wide_resnet50_2\"\n",
+    "# BACKBONE = \"wide_resnet50_2\"\n",
     "# BACKBONE = \"mcait\"\n",
     "\n",
     "# バックボーンから特徴抽出層を取得\n",
@@ -252,12 +252,17 @@
     "    layers = []\n",
     "else:\n",
     "    feature_model = timm.create_model(BACKBONE, features_only=True)\n",
-    "    layers = feature_model.feature_info.module_name() # type: ignore\n",
+    "    layers = feature_model.feature_info.module_name()  # type: ignore\n",
     "    print(layers)\n",
     "\n",
     "# 前処理の設定\n",
     "transform = Compose([Resize((IMAGE_SIZE, IMAGE_SIZE))])\n",
-    "pre_processor = PreProcessor(transform=transform)"
+    "pre_processor = PreProcessor(transform=transform)\n",
+    "\n",
+    "# visualizer = ImageVisualizer(\n",
+    "#     fields=[\"image\", \"anomaly_map\"],\n",
+    "# )\n",
+    "visualizer = False"
    ]
   },
   {
@@ -272,7 +277,7 @@
     "    model = Cfa(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
-    "        visualizer=False,\n",
+    "        visualizer=visualizer,\n",
     "        gamma_c=1,\n",
     "        gamma_d=1,\n",
     "        num_nearest_neighbors=3,\n",
@@ -285,6 +290,7 @@
     "    model = Cflow(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        layers=layers[-3:],\n",
     "        fiber_batch_size=BATCH_SIZE,\n",
     "        pre_trained=True,\n",
@@ -300,6 +306,7 @@
     "elif MODEL_NAME == \"CS-Flow\":\n",
     "    model = Csflow(\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        cross_conv_hidden_channels=1024,\n",
     "        n_coupling_blocks=4,\n",
     "        clamp=3,\n",
@@ -310,7 +317,8 @@
     "    model = Dfkde(\n",
     "        backbone=BACKBONE,\n",
     "        layers=[layers[-1]],\n",
-    "        # pre_processor = pre_processor,\n",
+    "        # pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        # n_pca_components=16,\n",
     "        n_pca_components=1,\n",
@@ -324,6 +332,7 @@
     "        backbone=BACKBONE,\n",
     "        layer=layers[-2],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        pooling_kernel_size=4,\n",
     "        pca_level=0.97,\n",
@@ -333,6 +342,7 @@
     "elif MODEL_NAME == \"DRAEM\":\n",
     "    model = Draem(\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        enable_sspcab=False,\n",
     "        sspcab_lambda=0.1,\n",
     "        anomaly_source_path=None,\n",
@@ -343,6 +353,7 @@
     "elif MODEL_NAME == \"DSR\":\n",
     "    model = Dsr(\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        latent_anomaly_strength=0.2,\n",
     "        upsampling_train_ratio=0.7,\n",
     "    )\n",
@@ -350,6 +361,7 @@
     "elif MODEL_NAME == \"Efficient AD\":\n",
     "    model = EfficientAd(\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        imagenet_dir=\"./datasets/imagenette\",\n",
     "        teacher_out_channels=384,\n",
     "        model_size=EfficientAdModelSize.S,\n",
@@ -363,6 +375,7 @@
     "    model = Fastflow(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        flow_steps=8,\n",
     "        conv3x3_only=False,\n",
@@ -375,6 +388,7 @@
     "        backbone=BACKBONE,\n",
     "        layer=layers[-2],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        input_dim=IMAGE_SIZE * IMAGE_SIZE,\n",
     "        latent_dim=IMAGE_SIZE,\n",
     "        pre_trained=True,\n",
@@ -384,6 +398,7 @@
     "elif MODEL_NAME == \"GANomaly\":\n",
     "    model = Ganomaly(\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        batch_size=32,\n",
     "        n_features=64,\n",
     "        latent_vec_size=100,\n",
@@ -403,6 +418,7 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        n_features=100,\n",
     "        pre_trained=True,\n",
     "    )\n",
@@ -412,6 +428,7 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-3:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        coreset_sampling_ratio=0.1,\n",
     "        num_neighbors=9,\n",
@@ -422,6 +439,7 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        anomaly_map_mode=AnomalyMapGenerationMode.ADD,\n",
     "        pre_trained=True,\n",
     "    )\n",
@@ -432,6 +450,7 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "    )\n",
     "    # max_epochs = 100\n",
     "    # callbacks = [EarlyStopping(patience=5, monitor=\"pixel_AUROC\", mode=\"max\")]\n",
@@ -440,6 +459,7 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-3:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        perlin_threshold = 0.2,\n",
     "        supervised=False,\n",
     "    )\n",
@@ -448,6 +468,7 @@
     "    model = Uflow(\n",
     "        backbone=BACKBONE,\n",
     "        # pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        flow_steps=4,\n",
     "        affine_clamp=2.0,\n",
     "        affine_subnet_channels_ratio=1.0,\n",
@@ -465,6 +486,7 @@
     "elif MODEL_NAME == \"WinCLIP\":\n",
     "    model = WinClip(\n",
     "        # pre_processor=pre_processor,\n",
+    "        visualizer=visualizer,\n",
     "        class_name=\"transistor\",\n",
     "        k_shot=0,\n",
     "        scales=(2, 3),\n",
