--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "#!/usr/bin/env python3\n",
     "import logging\n",
+    "import os\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "\n",
     "import cv2\n",
@@ -222,7 +224,7 @@
    "source": [
     "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
     "# MODEL_NAME = \"C-Flow\"\n",
-    "MODEL_NAME = \"CS-Flow\"  # \"\"\n",
+    "# MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
     "# MODEL_NAME = \"DFM\"\n",
     "# MODEL_NAME = \"DRAEM\"  # \"\"\n",
@@ -236,12 +238,12 @@
     "# MODEL_NAME = \"Reverse Distillation\"\n",
     "# MODEL_NAME = \"STFPM\"\n",
     "# TODO\n",
-    "# MODEL_NAME = \"SuperSimpleNet\"\n",
+    "MODEL_NAME = \"SuperSimpleNet\"\n",
     "# MODEL_NAME = \"U-Flow\"  # \"mcait\"\n",
     "# MODEL_NAME = \"VLM-AD\"  # \"\"\n",
     "# MODEL_NAME = \"WinCLIP\"  # \"\"\n",
-    "BACKBONE = \"\"\n",
-    "# BACKBONE = \"resnet18\"\n",
+    "# BACKBONE = \"\"\n",
+    "BACKBONE = \"resnet18\"\n",
     "# BACKBONE = \"resnet50\"\n",
     "# BACKBONE = \"efficientnet_b0\"\n",
     "# BACKBONE = \"wide_resnet50_2\"\n",
@@ -501,18 +503,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "if MODEL_NAME in [\"SuperSimpleNet\", \"VLM-AD\", \"WinCLIP\"]:\n",
+    "if MODEL_NAME in [\"SuperSimpleNet\"]:\n",
     "    # マスク付き\n",
     "    datamodule = Folder(\n",
     "        name=\"custom_anomaly\",\n",
     "        root=DATASET_PATH_ANOMALY,\n",
-    "        normal_dir=Path(\"train\") / \"good\",\n",
-    "        abnormal_dir=Path(\"test\") / \"broken_large\",\n",
-    "        normal_test_dir=Path(\"test\") / \"good\",\n",
-    "        mask_dir=Path(\"ground_truth\") / \"broken_large\",\n",
-    "        val_split_mode=ValSplitMode.FROM_TEST,\n",
+    "        normal_dir=Path(\"train\") / \"normal\",\n",
+    "        abnormal_dir=Path(\"train\") / \"abnormal\",\n",
+    "        normal_test_dir=Path(\"test\"),\n",
+    "        mask_dir=Path(\"train\") / \"mask\",\n",
+    "        val_split_mode=ValSplitMode.FROM_TRAIN,\n",
     "        val_split_ratio=0.2,\n",
     "        train_batch_size=BATCH_SIZE,\n",
     "        eval_batch_size=BATCH_SIZE,\n",
@@ -608,9 +608,9 @@
     "    train_predictions = engine.predict(\n",
     "        model=model, dataloaders=datamodule.train_dataloader()\n",
     "    )\n",
-    "    train_scores = [get_item(prediction, \"pred_score\") for prediction in train_predictions]\n",
+    "    train_scores = [get_item(prediction, \"pred_score\") for prediction in train_predictions] # type: ignore\n",
     "    # 閾値（99.7％）\n",
-    "    threshold = np.mean(train_scores) + 3 * np.std(train_scores)\n",
+    "    threshold = np.mean(train_scores) + 3 * np.std(train_scores) # type: ignore\n",
     "    # # 四分位範囲×1.5の場合\n",
     "    # threshold = np.percentile(train_scores, 75) + 1.5 * (\n",
     "    #     np.percentile(train_scores, 75) - np.percentile(train_scores, 25)\n",
@@ -638,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=len(predictions), ncols=2, figsize=(8, 6))\n",
+    "fig, ax = plt.subplots(nrows=len(predictions), ncols=2, figsize=(8, 6)) # type: ignore\n",
     "fig.suptitle(f\"{MODEL_NAME}[{BACKBONE}]\", x=0.2)\n",
     "fig.subplots_adjust(hspace=0.4, wspace=0.0, left=0, right=0.3)\n",
     "\n",
@@ -651,15 +651,15 @@
     "\n",
     "\n",
     "# TODO\n",
-    "if predictions[0].anomaly_map is not None:\n",
+    "if predictions[0].anomaly_map is not None: # type: ignore\n",
     "    # マップの最小値、最大値、範囲\n",
     "    map_min = min(\n",
-    "        prediction.anomaly_map[0].min().cpu().numpy()\n",
-    "        for prediction in predictions\n",
+    "        prediction.anomaly_map[0].min().cpu().numpy() # type: ignore\n",
+    "        for prediction in predictions # type: ignore\n",
     "    )\n",
     "    map_max = max(\n",
-    "        prediction.anomaly_map[0].max().cpu().numpy()\n",
-    "        for prediction in predictions\n",
+    "        prediction.anomaly_map[0].max().cpu().numpy() # type: ignore\n",
+    "        for prediction in predictions # type: ignore\n",
     "    )\n",
     "    map_ptp = map_max - map_min\n",
     "\n",
@@ -668,7 +668,7 @@
     "        image: np.ndarray,\n",
     "        alpha: float = 0.4,\n",
     "        gamma: int = 0,\n",
-    "    ) -> np.ndarray:\n",
+    "    ) -> np.ndarray | None:\n",
     "        nomalized_map = (((anomaly_map - map_min) / map_ptp) * 255).astype(\n",
     "            np.uint8\n",
     "        )\n",
@@ -685,15 +685,15 @@
     "        image: np.ndarray,\n",
     "        alpha: float = 0.4,\n",
     "        gamma: int = 0,\n",
-    "    ) -> np.ndarray:\n",
+    "    ) -> np.ndarray | None:\n",
     "        return None\n",
     "\n",
     "\n",
-    "for i, prediction in enumerate(predictions):\n",
+    "for i, prediction in enumerate(predictions): # type: ignore\n",
     "\n",
     "    image_path = get_item(prediction, \"image_path\")\n",
-    "    image_size = prediction.image.shape[-2:]\n",
-    "    image = np.array(Image.open(image_path).resize(image_size))\n",
+    "    image_size = prediction.image.shape[-2:] # type: ignore\n",
+    "    image = np.array(Image.open(image_path).resize(image_size)) # type: ignore\n",
     "    set_ax_style(ax[i, 0], image)\n",
     "    pred_score = get_item(prediction, \"pred_score\")\n",
     "\n",
@@ -709,7 +709,7 @@
     "        # 閾値で判定\n",
     "        pred_labels = \"Anomaly\" if pred_score > threshold else \"Normal\"\n",
     "    ax[i, 0].set_title(\n",
-    "        f\"[{Path(image_path).name}] Score: {pred_score:.2f} [{pred_labels}]\",\n",
+    "        f\"[{Path(image_path).name}] Score: {pred_score:.2f} [{pred_labels}]\", # type: ignore\n",
     "        loc=\"left\",\n",
     "    )\n",
     "\n",
@@ -717,7 +717,7 @@
     "    if anomaly_map is None:\n",
     "        set_ax_style(ax[i, 1], anomaly_map)\n",
     "        continue\n",
-    "    anomaly_map = anomaly_map.cpu().numpy().squeeze()\n",
+    "    anomaly_map = anomaly_map.cpu().numpy().squeeze() # type: ignore\n",
     "\n",
     "    heat_map = superimpose_anomaly_map_g(anomaly_map=anomaly_map, image=image)\n",
     "    set_ax_style(ax[i, 1], heat_map)"
