Correcting a DataSet containing abnormal data

--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -209,10 +209,13 @@
    "source": [
     "# ----- 設定 -----\n",
     "DATASET_PATH = \"./datasets/custom\"\n",
-    "DATASET_PATH_ANOMALY = \"./datasets/custom_anomaly\"\n",
-    "IMAGE_SIZE = 128\n",
+    "IMAGE_SIZE = 256\n",
     "BATCH_SIZE = 1\n",
-    "EPOCHS = 1"
+    "EPOCHS = 1\n",
+    "# 異常データあり\n",
+    "HAS_ABNORMAL = True\n",
+    "# しきい値自動\n",
+    "THRESHOLD_AUTO = True"
    ]
   },
   {
@@ -223,7 +226,7 @@
    "outputs": [],
    "source": [
     "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
-    "# MODEL_NAME = \"C-Flow\"\n",
+    "MODEL_NAME = \"C-Flow\"\n",
     "# MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
     "# MODEL_NAME = \"DFM\"\n",
@@ -237,16 +240,15 @@
     "# MODEL_NAME = \"PatchCore\"\n",
     "# MODEL_NAME = \"Reverse Distillation\"\n",
     "# MODEL_NAME = \"STFPM\"\n",
-    "# TODO\n",
-    "MODEL_NAME = \"SuperSimpleNet\"\n",
+    "# MODEL_NAME = \"SuperSimpleNet\"\n",
     "# MODEL_NAME = \"U-Flow\"  # \"mcait\"\n",
     "# MODEL_NAME = \"VLM-AD\"  # \"\"\n",
     "# MODEL_NAME = \"WinCLIP\"  # \"\"\n",
     "# BACKBONE = \"\"\n",
-    "BACKBONE = \"resnet18\"\n",
+    "# BACKBONE = \"resnet18\"\n",
     "# BACKBONE = \"resnet50\"\n",
     "# BACKBONE = \"efficientnet_b0\"\n",
-    "# BACKBONE = \"wide_resnet50_2\"\n",
+    "BACKBONE = \"wide_resnet50_2\"\n",
     "# BACKBONE = \"mcait\"\n",
     "\n",
     "# バックボーンから特徴抽出層を取得\n",
@@ -386,7 +388,8 @@
     "    # max_epochs = 500\n",
     "    # callbacks = [EarlyStopping(monitor=\"pixel_AUROC\", mode=\"max\")]\n",
     "elif MODEL_NAME == \"FRE\":\n",
-    "    model = Fre(\n",
+    "    from models import FreEx\n",
+    "    model = FreEx(\n",
     "        backbone=BACKBONE,\n",
     "        layer=layers[-2],\n",
     "        pre_processor=pre_processor,\n",
@@ -395,6 +398,7 @@
     "        latent_dim=IMAGE_SIZE,\n",
     "        pre_trained=True,\n",
     "        pooling_kernel_size=2,\n",
+    "        max_epochs=EPOCHS,\n",
     "    )\n",
     "    # max_epochs = 1220\n",
     "elif MODEL_NAME == \"GANomaly\":\n",
@@ -503,26 +507,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if MODEL_NAME in [\"SuperSimpleNet\"]:\n",
-    "    # マスク付き\n",
-    "    datamodule = Folder(\n",
-    "        name=\"custom_anomaly\",\n",
-    "        root=DATASET_PATH_ANOMALY,\n",
-    "        normal_dir=Path(\"train\") / \"normal\",\n",
-    "        abnormal_dir=Path(\"train\") / \"abnormal\",\n",
-    "        normal_test_dir=Path(\"test\"),\n",
-    "        mask_dir=Path(\"train\") / \"mask\",\n",
-    "        val_split_mode=ValSplitMode.FROM_TRAIN,\n",
-    "        val_split_ratio=0.2,\n",
-    "        train_batch_size=BATCH_SIZE,\n",
-    "        eval_batch_size=BATCH_SIZE,\n",
-    "        num_workers=1,\n",
-    "    )\n",
-    "else:\n",
+    "if not HAS_ABNORMAL:\n",
+    "    # 異常データなし\n",
     "    datamodule = Folder(\n",
     "        name=\"custom\",\n",
     "        root=DATASET_PATH,\n",
-    "        normal_dir=\"train\",\n",
+    "        normal_dir=Path(\"train\") / \"normal\",\n",
     "        normal_test_dir=\"test\",\n",
     "        val_split_mode=ValSplitMode.FROM_TRAIN,\n",
     "        # 検証データを入れるとスコアが1か0になるため、検証はしない\n",
@@ -532,11 +522,37 @@
     "        eval_batch_size=BATCH_SIZE,\n",
     "        num_workers=1,\n",
     "    )\n",
+    "else:\n",
+    "    # 異常データあり\n",
+    "    datamodule = Folder(\n",
+    "        name=\"custom\",\n",
+    "        root=DATASET_PATH,\n",
+    "        # abnormal_dirとnormal_test_dirのデータがvalになる\n",
+    "        normal_dir=Path(\"train\") / \"normal\",\n",
+    "        abnormal_dir=Path(\"train\") / \"abnormal\",\n",
+    "        mask_dir=Path(\"train\") / \"mask\",\n",
+    "        normal_test_dir=Path(\"train\") / \"normal\",\n",
+    "        val_split_mode=ValSplitMode.SAME_AS_TEST,\n",
+    "        train_batch_size=BATCH_SIZE,\n",
+    "        eval_batch_size=BATCH_SIZE,\n",
+    "        num_workers=0,\n",
+    "    )\n",
     "datamodule.setup()\n",
     "\n",
     "print(len(datamodule.train_data))\n",
+    "# 異常データがない場合は、val_dataなし\n",
+    "# 異常データがある場合は、abnormal_dirのデータがvalとtestに設定される\n",
     "print(len(datamodule.val_data))\n",
-    "print(len(datamodule.test_data))"
+    "print(len(datamodule.test_data))\n",
+    "\n",
+    "# テスト用\n",
+    "folder_dataset_test = FolderDataset(\n",
+    "    name=\"folder_dataset_test\",\n",
+    "    normal_dir=Path(DATASET_PATH) / \"test\",\n",
+    "    # splitをtrainにすることでラベルを「正常」としてnormal_dirのデータを読み込み\n",
+    "    split=\"train\",\n",
+    ")\n",
+    "print(len(folder_dataset_test))"
    ]
   },
   {
@@ -553,10 +569,20 @@
     "    accelerator=\"auto\",\n",
     "    devices=1,\n",
     ")\n",
-    "engine.fit(\n",
-    "    model=model,\n",
-    "    datamodule=datamodule,\n",
-    ")"
+    "if not HAS_ABNORMAL:\n",
+    "    # 異常データが無い場合は学習のみで検証しない\n",
+    "    engine.train(\n",
+    "        model=model,\n",
+    "        datamodule=datamodule,\n",
+    "    )\n",
+    "    print(\"trained.\")\n",
+    "else:\n",
+    "    # 異常データがある場合\n",
+    "    engine.fit(\n",
+    "        model=model,\n",
+    "        datamodule=datamodule,\n",
+    "    )\n",
+    "    print(\"fitted.\")"
    ]
   },
   {
@@ -603,22 +629,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    # trainデータのスコア\n",
-    "    train_predictions = engine.predict(\n",
-    "        model=model, dataloaders=datamodule.train_dataloader()\n",
-    "    )\n",
-    "    train_scores = [get_item(prediction, \"pred_score\") for prediction in train_predictions] # type: ignore\n",
-    "    # 閾値（99.7％）\n",
-    "    threshold = np.mean(train_scores) + 3 * np.std(train_scores) # type: ignore\n",
-    "    # # 四分位範囲×1.5の場合\n",
-    "    # threshold = np.percentile(train_scores, 75) + 1.5 * (\n",
-    "    #     np.percentile(train_scores, 75) - np.percentile(train_scores, 25)\n",
-    "    # )\n",
-    "except Exception as e:\n",
-    "    print(f\"exception: {e}\")\n",
-    "    threshold = 0\n",
-    "print(f\"threshold: {threshold}\")"
+    "if THRESHOLD_AUTO:\n",
+    "    try:\n",
+    "        # trainデータのスコア\n",
+    "        train_predictions = engine.predict(\n",
+    "            model=model, dataloaders=datamodule.train_dataloader()\n",
+    "        )\n",
+    "        train_scores = [get_item(prediction, \"pred_score\") for prediction in train_predictions]  # type: ignore\n",
+    "        # 閾値（99.7％）\n",
+    "        threshold = np.mean(train_scores) + 3 * np.std(train_scores)  # type: ignore\n",
+    "        # # 四分位範囲×1.5の場合\n",
+    "        # threshold = np.percentile(train_scores, 75) + 1.5 * (\n",
+    "        #     np.percentile(train_scores, 75) - np.percentile(train_scores, 25)\n",
+    "        # )\n",
+    "    except Exception as e:\n",
+    "        print(f\"exception: {e}\")\n",
+    "        threshold = 0\n",
+    "    print(f\"threshold: {threshold}\")\n",
+    "else:\n",
+    "    threshold = 0"
    ]
   },
   {
@@ -628,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = engine.predict(model=model, datamodule=datamodule)"
+    "predictions = engine.predict(model=model, dataset=folder_dataset_test)"
    ]
   },
   {
@@ -700,14 +729,14 @@
     "    if pred_score is None:\n",
     "        pred_score = 0.0\n",
     "\n",
-    "    if get_item(prediction, \"gt_mask\") is not None:\n",
-    "        # マスクがある場合はラベルから\n",
-    "        pred_labels = (\n",
-    "            \"Anomaly\" if get_item(prediction, \"pred_label\") else \"Normal\"\n",
-    "        )\n",
-    "    else:\n",
-    "        # 閾値で判定\n",
-    "        pred_labels = \"Anomaly\" if pred_score > threshold else \"Normal\"\n",
+    "    # if HAS_ABNORMAL:\n",
+    "    #     # 異常データがある場合はラベルから\n",
+    "    #     pred_labels = (\n",
+    "    #         \"Anomaly\" if get_item(prediction, \"pred_label\") else \"Normal\"\n",
+    "    #     )\n",
+    "    # else:\n",
+    "    # 閾値で判定\n",
+    "    pred_labels = \"Anomaly\" if pred_score > threshold else \"Normal\"\n",
     "    ax[i, 0].set_title(\n",
     "        f\"[{Path(image_path).name}] Score: {pred_score:.2f} [{pred_labels}]\", # type: ignore\n",
     "        loc=\"left\",\n",
