Always run fit, regardless of the dataset.

--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -209,13 +209,13 @@
    "source": [
     "# ----- 設定 -----\n",
     "DATASET_PATH = \"./datasets/custom\"\n",
-    "IMAGE_SIZE = 256\n",
+    "IMAGE_SIZE = 128\n",
     "BATCH_SIZE = 1\n",
     "EPOCHS = 1\n",
     "# 異常データあり\n",
     "HAS_ABNORMAL = True\n",
     "# しきい値自動\n",
-    "THRESHOLD_AUTO = True"
+    "THRESHOLD_AUTO = False"
    ]
   },
   {
@@ -225,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
-    "MODEL_NAME = \"C-Flow\"\n",
+    "MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
+    "# MODEL_NAME = \"C-Flow\"\n",
     "# MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
     "# MODEL_NAME = \"DFM\"\n",
@@ -569,20 +569,7 @@
     "    accelerator=\"auto\",\n",
     "    devices=1,\n",
     ")\n",
-    "if not HAS_ABNORMAL:\n",
-    "    # 異常データが無い場合は学習のみで検証しない\n",
-    "    engine.train(\n",
-    "        model=model,\n",
-    "        datamodule=datamodule,\n",
-    "    )\n",
-    "    print(\"trained.\")\n",
-    "else:\n",
-    "    # 異常データがある場合\n",
-    "    engine.fit(\n",
-    "        model=model,\n",
-    "        datamodule=datamodule,\n",
-    "    )\n",
-    "    print(\"fitted.\")"
+    "engine.fit(model=model, datamodule=datamodule)"
    ]
   },
   {
@@ -668,7 +655,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=len(predictions), ncols=2, figsize=(8, 6)) # type: ignore\n",
-    "fig.suptitle(f\"{MODEL_NAME}[{BACKBONE}]\", x=0.2)\n",
+    "fig.suptitle(f\"{MODEL_NAME}[{BACKBONE}] threshold={threshold:.5f}\", x=0.2)\n",
     "fig.subplots_adjust(hspace=0.4, wspace=0.0, left=0, right=0.3)\n",
     "\n",
     "\n",
@@ -738,7 +725,7 @@
     "    # 閾値で判定\n",
     "    pred_labels = \"Anomaly\" if pred_score > threshold else \"Normal\"\n",
     "    ax[i, 0].set_title(\n",
-    "        f\"[{Path(image_path).name}] Score: {pred_score:.2f} [{pred_labels}]\", # type: ignore\n",
+    "        f\"[{Path(image_path).name}] Score: {pred_score:.5f} [{pred_labels}]\", # type: ignore\n",
     "        loc=\"left\",\n",
     "    )\n",
     "\n",
