Fixed predict processing, because WinClip does not support FolderDataSet

--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
+    "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
     "# MODEL_NAME = \"C-Flow\"\n",
     "# MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
@@ -243,12 +243,12 @@
     "# MODEL_NAME = \"SuperSimpleNet\"\n",
     "# MODEL_NAME = \"U-Flow\"  # \"mcait\"\n",
     "# MODEL_NAME = \"VLM-AD\"  # \"\"\n",
-    "# MODEL_NAME = \"WinCLIP\"  # \"\"\n",
-    "# BACKBONE = \"\"\n",
+    "MODEL_NAME = \"WinCLIP\"  # \"\"\n",
+    "BACKBONE = \"\"\n",
     "# BACKBONE = \"resnet18\"\n",
     "# BACKBONE = \"resnet50\"\n",
     "# BACKBONE = \"efficientnet_b0\"\n",
-    "BACKBONE = \"wide_resnet50_2\"\n",
+    "# BACKBONE = \"wide_resnet50_2\"\n",
     "# BACKBONE = \"mcait\"\n",
     "\n",
     "# バックボーンから特徴抽出層を取得\n",
@@ -644,7 +644,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = engine.predict(model=model, dataset=folder_dataset_test)"
+    "if isinstance(model, WinClip):\n",
+    "    # WinClipはFolderDatasetに対応していないためFolderで再度読み込み\n",
+    "    datamodule_test = Folder(\n",
+    "        name=\"custom_test\",\n",
+    "        root=DATASET_PATH,\n",
+    "        normal_dir=Path(\"test\"),\n",
+    "        val_split_mode=ValSplitMode.SAME_AS_TEST,\n",
+    "        val_split_ratio=0.0001,\n",
+    "        normal_test_dir=\"test\",\n",
+    "        train_batch_size=BATCH_SIZE,\n",
+    "        eval_batch_size=BATCH_SIZE,\n",
+    "        num_workers=0,\n",
+    "    )\n",
+    "    datamodule_test.setup()\n",
+    "    print(len(datamodule_test.train_data))\n",
+    "    print(len(datamodule_test.val_data))\n",
+    "    print(len(datamodule_test.test_data))\n",
+    "    predictions = engine.predict(model=model, datamodule=datamodule_test)\n",
+    "else:\n",
+    "    predictions = engine.predict(model=model, dataset=folder_dataset_test)"
    ]
   },
   {
