--- a/anomalib-test.ipynb
+++ b/anomalib-test.ipynb
@@ -213,9 +213,9 @@
     "BATCH_SIZE = 1\n",
     "EPOCHS = 1\n",
     "# 異常データあり\n",
-    "HAS_ABNORMAL = True\n",
+    "HAS_ABNORMAL = False\n",
     "# しきい値自動\n",
-    "THRESHOLD_AUTO = False"
+    "THRESHOLD_AUTO = True"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "source": [
     "# MODEL_NAME = \"CFA\"  # \"wide_resnet50_2\"\n",
     "# MODEL_NAME = \"C-Flow\"\n",
-    "# MODEL_NAME = \"CS-Flow\"  # \"\"\n",
+    "MODEL_NAME = \"CS-Flow\"  # \"\"\n",
     "# MODEL_NAME = \"DFKDE\"\n",
     "# MODEL_NAME = \"DFM\"\n",
     "# MODEL_NAME = \"DRAEM\"  # \"\"\n",
@@ -243,14 +243,22 @@
     "# MODEL_NAME = \"SuperSimpleNet\"\n",
     "# MODEL_NAME = \"U-Flow\"  # \"mcait\"\n",
     "# MODEL_NAME = \"VLM-AD\"  # \"\"\n",
-    "MODEL_NAME = \"WinCLIP\"  # \"\"\n",
+    "# MODEL_NAME = \"WinCLIP\"  # \"\"\n",
     "BACKBONE = \"\"\n",
     "# BACKBONE = \"resnet18\"\n",
     "# BACKBONE = \"resnet50\"\n",
     "# BACKBONE = \"efficientnet_b0\"\n",
     "# BACKBONE = \"wide_resnet50_2\"\n",
-    "# BACKBONE = \"mcait\"\n",
-    "\n",
+    "# BACKBONE = \"mcait\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65ff488e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# バックボーンから特徴抽出層を取得\n",
     "if BACKBONE in [\"\", \"mcait\"]:\n",
     "    layers = []\n",
@@ -262,6 +270,9 @@
     "# 前処理の設定\n",
     "transform = Compose([Resize((IMAGE_SIZE, IMAGE_SIZE))])\n",
     "pre_processor = PreProcessor(transform=transform)\n",
+    "\n",
+    "post_processor = True\n",
+    "evaluator = True\n",
     "\n",
     "# visualizer = ImageVisualizer(\n",
     "#     fields=[\"image\", \"anomaly_map\"],\n",
@@ -281,6 +292,8 @@
     "    model = Cfa(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        gamma_c=1,\n",
     "        gamma_d=1,\n",
@@ -294,6 +307,8 @@
     "    model = Cflow(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        layers=layers[-3:],\n",
     "        fiber_batch_size=BATCH_SIZE,\n",
@@ -310,6 +325,8 @@
     "elif MODEL_NAME == \"CS-Flow\":\n",
     "    model = Csflow(\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        cross_conv_hidden_channels=1024,\n",
     "        n_coupling_blocks=4,\n",
@@ -322,6 +339,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=[layers[-1]],\n",
     "        # pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        # n_pca_components=16,\n",
@@ -336,6 +355,8 @@
     "        backbone=BACKBONE,\n",
     "        layer=layers[-2],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        pooling_kernel_size=4,\n",
@@ -346,6 +367,8 @@
     "elif MODEL_NAME == \"DRAEM\":\n",
     "    model = Draem(\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        enable_sspcab=False,\n",
     "        sspcab_lambda=0.1,\n",
@@ -357,6 +380,8 @@
     "elif MODEL_NAME == \"DSR\":\n",
     "    model = Dsr(\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        latent_anomaly_strength=0.2,\n",
     "        upsampling_train_ratio=0.7,\n",
@@ -365,6 +390,8 @@
     "elif MODEL_NAME == \"Efficient AD\":\n",
     "    model = EfficientAd(\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        imagenet_dir=\"./datasets/imagenette\",\n",
     "        teacher_out_channels=384,\n",
@@ -379,6 +406,8 @@
     "    model = Fastflow(\n",
     "        backbone=BACKBONE,\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        flow_steps=8,\n",
@@ -393,6 +422,8 @@
     "        backbone=BACKBONE,\n",
     "        layer=layers[-2],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        input_dim=IMAGE_SIZE * IMAGE_SIZE,\n",
     "        latent_dim=IMAGE_SIZE,\n",
@@ -404,6 +435,8 @@
     "elif MODEL_NAME == \"GANomaly\":\n",
     "    model = Ganomaly(\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        batch_size=32,\n",
     "        n_features=64,\n",
@@ -424,6 +457,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        n_features=100,\n",
     "        pre_trained=True,\n",
@@ -434,6 +469,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-3:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        pre_trained=True,\n",
     "        coreset_sampling_ratio=0.1,\n",
@@ -445,6 +482,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        anomaly_map_mode=AnomalyMapGenerationMode.ADD,\n",
     "        pre_trained=True,\n",
@@ -456,6 +495,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-4:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "    )\n",
     "    # max_epochs = 100\n",
@@ -465,6 +506,8 @@
     "        backbone=BACKBONE,\n",
     "        layers=layers[-3:-1],\n",
     "        pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        perlin_threshold = 0.2,\n",
     "        supervised=False,\n",
@@ -474,6 +517,8 @@
     "    model = Uflow(\n",
     "        backbone=BACKBONE,\n",
     "        # pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        flow_steps=4,\n",
     "        affine_clamp=2.0,\n",
@@ -492,6 +537,8 @@
     "elif MODEL_NAME == \"WinCLIP\":\n",
     "    model = WinClip(\n",
     "        # pre_processor=pre_processor,\n",
+    "        post_processor=post_processor,\n",
+    "        evaluator=evaluator,\n",
     "        visualizer=visualizer,\n",
     "        class_name=\"transistor\",\n",
     "        k_shot=0,\n",
@@ -507,6 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ---- データモジュール ----\n",
     "if not HAS_ABNORMAL:\n",
     "    # 異常データなし\n",
     "    datamodule = Folder(\n",
@@ -563,6 +611,7 @@
    "outputs": [],
    "source": [
     "# ----- 学習 -----\n",
+    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\"\n",
     "engine = Engine(\n",
     "    # callbacks=callbacks,\n",
     "    max_epochs=EPOCHS,\n",
@@ -616,6 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ----- 閾値設定 -----\n",
     "if THRESHOLD_AUTO:\n",
     "    try:\n",
     "        # trainデータのスコア\n",
@@ -644,8 +694,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if isinstance(model, WinClip):\n",
-    "    # WinClipはFolderDatasetに対応していないためFolderで再度読み込み\n",
+    "# ---- 予測 ----\n",
+    "if isinstance(model, WinClip) or isinstance(model, VlmAd):\n",
+    "    # VLM-AD,WinClipはFolderDatasetに対応していないためFolderで再度読み込み\n",
     "    datamodule_test = Folder(\n",
     "        name=\"custom_test\",\n",
     "        root=DATASET_PATH,\n",
